[cli] extracted the application package API to a separate package
Signed-off-by: Anton Kosiakov <anton.kosyakov@typefox.io>

--- a/examples/browser/package.json
+++ b/examples/browser/package.json
@@ -21,14 +21,14 @@
     "@theia/typescript": "^0.1.1"
   },
   "scripts": {
-    "prepare": "yarn run clean && yarn run build",
-    "clean": "theia clean && rimraf errorShots",
-    "build": "theia generate --target=browser && theia build",
-    "watch": "theia build --watch",
+    "prepare": "yarn run clean && yarn build",
+    "clean": "theia rm:browser && rimraf errorShots",
+    "build": "theia build:browser",
+    "watch": "yarn build --watch",
     "start": "theia browser",
     "start:debug": "theia browser --loglevel=debug",
     "test": "wdio",
-    "coverage:compile": "webpack --config coverage-webpack.config.js && shx cp src-gen/frontend/index.html lib",
+    "coverage:compile": "yarn build --config coverage-webpack.config.js",
     "coverage:remap": "remap-istanbul -i coverage/coverage.json -o coverage/coverage-final.json --exclude 'frontend/index.js' && rimraf coverage/coverage.json",
     "coverage:report:html": "istanbul report --root coverage --format html",
     "coverage:report:lcov": "istanbul report --root coverage --format lcov",
