--- a/package.json
+++ b/package.json
@@ -44,8 +44,8 @@
     "test:browser": "yarn rebuild:browser && run test \"@theia/example-browser\"",
     "test:electron": "yarn rebuild:electron && run test \"@theia/example-electron\"",
     "rebuild:clean": "rimraf .browser_modules",
-    "rebuild:browser": "theia rebuild --target=browser",
-    "rebuild:electron": "theia rebuild --target=electron",
+    "rebuild:browser": "theia rebuild:browser",
+    "rebuild:electron": "theia rebuild:electron",
     "rebuild:electron:debug": "DEBUG=electron-rebuild && yarn rebuild:electron",
     "watch": "lerna run watch --scope \"@theia/!(example-)*\" --parallel",
     "publish": "yarn && yarn test && yarn publish:latest",
