--- a/examples/electron/package.json
+++ b/examples/electron/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@theia/core": "^0.1.1",
     "@theia/filesystem": "^0.1.1",
+    "@theia/extension-manager": "^0.1.1",
     "@theia/workspace": "^0.1.1",
     "@theia/preferences": "^0.1.1",
     "@theia/navigator": "^0.1.1",
