--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,13 +9,15 @@
     "editor.formatOnSave": true,
     "search.exclude": {
         "**/node_modules": true,
-        "**/lib": true
+        "**/lib": true,
+        "**/coverage": true
     },
     "lcov.path": [
         "packages/core/coverage/lcov.info",
         "packages/cpp/coverage/lcov.info",
         "packages/editor/coverage/lcov.info",
         "packages/filesystem/coverage/lcov.info",
+        "packages/extension-manager/coverage/lcov.info",
         "packages/go/coverage/lcov.info",
         "packages/java/coverage/lcov.info",
         "packages/languages/coverage/lcov.info",
