--- a/packages/outline-view/package.json
+++ b/packages/outline-view/package.json
@@ -4,7 +4,8 @@
   "description": "Theia - Outline View Extension",
   "dependencies": {
     "@theia/core": "^0.1.1",
-    "@theia/filesystem": "^0.1.1"
+    "@theia/filesystem": "^0.1.1",
+    "@theia/editor": "^0.1.1"
   },
   "publishConfig": {
     "access": "public"
