[extension-manager] GH-369: support transitive dependencies
Signed-off-by: Anton Kosiakov <anton.kosyakov@typefox.io>

--- a/examples/electron/package.json
+++ b/examples/electron/package.json
@@ -4,22 +4,22 @@
   "version": "0.1.1",
   "dependencies": {
     "@theia/core": "^0.1.1",
-    "@theia/filesystem": "^0.1.1",
-    "@theia/extension-manager": "^0.1.1",
-    "@theia/workspace": "^0.1.1",
-    "@theia/preferences": "^0.1.1",
-    "@theia/navigator": "^0.1.1",
-    "@theia/process": "^0.1.1",
-    "@theia/terminal": "^0.1.1",
-    "@theia/editor": "^0.1.1",
-    "@theia/languages": "^0.1.1",
-    "@theia/monaco": "^0.1.1",
-    "@theia/java": "^0.1.1",
-    "@theia/python": "^0.1.1",
     "@theia/cpp": "^0.1.1",
+    "@theia/editor": "^0.1.1",
+    "@theia/extension-manager": "^0.1.1",
+    "@theia/filesystem": "^0.1.1",
     "@theia/go": "^0.1.1",
+    "@theia/java": "^0.1.1",
+    "@theia/languages": "^0.1.1",
+    "@theia/markers": "^0.1.1",
+    "@theia/monaco": "^0.1.1",
+    "@theia/navigator": "^0.1.1",
+    "@theia/preferences": "^0.1.1",
+    "@theia/process": "^0.1.1",
+    "@theia/python": "^0.1.1",
+    "@theia/terminal": "^0.1.1",
     "@theia/typescript": "^0.1.1",
-    "@theia/markers": "^0.1.1"
+    "@theia/workspace": "^0.1.1"
   },
   "scripts": {
     "prepare": "yarn run clean && yarn build",
