--- a/packages/outline-view/package.json
+++ b/packages/outline-view/package.json
@@ -5,7 +5,8 @@
   "dependencies": {
     "@theia/core": "^0.1.1",
     "@theia/filesystem": "^0.1.1",
-    "@theia/editor": "^0.1.1"
+    "@theia/editor": "^0.1.1",
+    "@theia/monaco": "^0.1.1"
   },
   "publishConfig": {
     "access": "public"
